# remote-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MCP.md  README.md  app.py  docker-compose.yml  env.json  event.json  openapi.yaml  pyproject.toml  requirements.txt  samconfig.toml  simple_mcp_test.py  template.yaml  test_mcp_client.py
.github/workflows/: ci-cd.yml  deploy.yml
docs/: agents.html  api.html  api.md  claude.html  contributing.html  deployment.html  deployment.md  index.html  investors.html  logging.html  logging.md  openapi.yaml  script.js  style.css
examples/: .env.example  client-examples.py  docker-compose.override.yml  mcp-client-config.json  sam-parameters.json
examples/amazon-sns-sqs-mcp-server/: print_tools.py
examples/amazon-sns-sqs-mcp-server/awslabs/amazon_sns_sqs_mcp_server/: common.py  consts.py  generator.py  server.py  sns.py  sqs.py
examples/amazon-sns-sqs-mcp-server/tests/: test_common.py  test_generator.py  test_server.py  test_sns.py  test_sqs.py
remote_mcp_server/: __init__.py  app.py  aws_lambda.py  billing.py  config.py  logging_config.py  mcp_server.py  middleware.py  requirements.txt  server.py  tools.py
scripts/: build.sh  deploy.sh  local-dev.sh  test.sh
tests/: __init__.py  conftest.py
tests/integration/: test_api_gateway.py  test_mcp_integration.py
tests/unit/: test_app.py  test_coverage_completion.py  test_final_coverage.py  test_handler.py  test_lambda_extended.py  test_logging.py  test_logging_extended.py  test_mcp_server.py  test_mcp_tools_extended.py
